--- a/index.html
+++ b/index.html
@@ -76,5 +76,6 @@
     </script>
 
     <a href="ical.html">Beta Project V2</a>
+    <a href="calv3.html"><H1>Beta Project V3</H1></a>
 </body>
 </html>
