--- a/calv3.html
+++ b/calv3.html
@@ -88,7 +88,8 @@
              </tr>
         </table>
     </div>
-
+    <a href="index.html"><h3>Kembali</h3></a>
+    <a href="ical.html"><h3>Beta Project V2</h3></a>
     <script>   
         function insert(num){
             document.form.textview.value = document.form.textview.value+num
