--- a/ical.html
+++ b/ical.html
@@ -12,32 +12,41 @@
     <hr size="20" color="black">
     <div style="widht:261px; background:FFF8DC">
     <from name:"Calculator">
-    <input name="display" placeholder="0" style="254px; height:60px; text-align:right; font-size:30; border-radius:8px; margin:3px;"/> <br>
-    <input type="button" value="7" onClick="document.Calculator.display.value +='7'" style="width:60px; height:60px; font-size:30; border-radius:8px; margin:3px;"/>
-    <input type="button" value="8" onClick="document.Calculator.display.value +='8'" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
-    <input type="button" value="9" onclick="document.Calculator.display.value +='9'" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
-    <input type="button" value="+" onclick="btnplus()" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
-        <br>
-    <input type="button" value="4" onclick="document.Calculator.display.value +='4'" style="width:60px; height:60px; font-size:30; border-radius:8px; margin:3px;"/>
-    <input type="button" value="5" onclick="document.Calculator.display.value +='5'" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
-    <input type="button" value="6" onclick="document.Calculator.display.value +='6'" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
-    <input type="button" value="+" onclick="btnplus()" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
-        <br>
-    <input type="button" value="1" onclick="document.Calculator.display.value +='1'" style="width:60px; height:60px; font-size:30; border-radius:8px; margin:3px;"/>
-    <input type="button" value="2" onclick="document.Calculator.display.value +='2'" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
-    <input type="button" value="3" onclick="document.Calculator.display.value +='3'" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
-    <input type="button" value="*" onclick="btnmult()" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
-         <br>
-    <input type="button" value="0" onclick="document.Calculator.display.value +='0'" style="width:60px; height:60px; font-size:30; border-radius:8px; margin:3px;"/>
-    <input type="button" value="%" onclick="btnmod()" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
-    <input type="button" value="." onclick="btndot()" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
-    <input type="button" value="/" onclick="btndiv()" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
-        <br>
-    <input type="button" value="=" onclick="document.Calculator.display.value = eval(document.Calculator.display.value)" 
-    style="width:124px; height:60px; font-size:30; border-radius:8px; margin:3px;"/>
-    <input type="button" value="c" onclick="btnclear()" style="width:124px; height:60px; font-size:30; border-radius:8px;"/>
+        <input name="display" placeholder="0" style="254px; height:60px; text-align:right; font-size:30; border-radius:8px; margin:3px;"/> <br>
+        <input type="button" value="7" onClick="document.Calculator.display.value +='7'" style="width:60px; height:60px; font-size:30; border-radius:8px; margin:3px;"/>
+        <input type="button" value="8" onClick="document.Calculator.display.value +='8'" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
+        <input type="button" value="9" onclick="document.Calculator.display.value +='9'" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
+        <input type="button" value="+" onclick="btnplus()" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
+            <br>
+        <input type="button" value="4" onclick="document.Calculator.display.value +='4'" style="width:60px; height:60px; font-size:30; border-radius:8px; margin:3px;"/>
+        <input type="button" value="5" onclick="document.Calculator.display.value +='5'" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
+        <input type="button" value="6" onclick="document.Calculator.display.value +='6'" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
+        <input type="button" value="+" onclick="btnplus()" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
+            <br>
+        <input type="button" value="1" onclick="document.Calculator.display.value +='1'" style="width:60px; height:60px; font-size:30; border-radius:8px; margin:3px;"/>
+        <input type="button" value="2" onclick="document.Calculator.display.value +='2'" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
+        <input type="button" value="3" onclick="document.Calculator.display.value +='3'" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
+        <input type="button" value="*" onclick="btnmult()" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
+            <br>
+        <input type="button" value="0" onclick="document.Calculator.display.value +='0'" style="width:60px; height:60px; font-size:30; border-radius:8px; margin:3px;"/>
+        <input type="button" value="%" onclick="btnmod()" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
+        <input type="button" value="." onclick="btndot()" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
+        <input type="button" value="/" onclick="btndiv()" style="width:60px; height:60px; font-size:30; border-radius:8px;"/>
+            <br>
+        <input type="button" value="=" onclick="document.Calculator.display.value = eval(document.Calculator.display.value)" 
+        style="width:124px; height:60px; font-size:30; border-radius:8px; margin:3px;"/>
+        <input type="button" value="c" onclick="btnclear()" style="width:124px; height:60px; font-size:30; border-radius:8px;"/>
     </from><div></div>
-
+    <hr size="20" color="black">
     <a href="index.html">kembali awal</a>
+
+    <script>
+        function btnplus() {
+            document.Calculator.display.value +='+';
+            document.Calculator.display.style.textAlign = "right";
+        }
+        
+    
+    </script>
 </body>
 </html>
